cfn_benchmark/cfn_templates/tomwwright__littleorange/sceptre/templates/Networking/Route53Resolver.cfn.yaml
---
AWSTemplateFormatVersion: 2010-09-09
Description: Little Orange VPC for DNS
Parameters:
  DnsVpcId:
    Description: VPC ID to deploy Resolver Endpoint
    Type: AWS::EC2::VPC::Id
  IpRangesPrefixListId:
    Description: Prefix List ID for the CIDRs to allow to reach Resolver Endpoint
    Type: String
  OrganizationAccountId:
    Description: ID of the Little Orange Organization management account
    Type: String
  OrganizationId:
    Description: ID of the Little Orange Organization
    Type: String
  ResolverEndpointSubnetIds:
    Description: List of 3 VPC Subnet IDs to use for deploying Resolver Endpoint
    Type: List<AWS::EC2::Subnet::Id>
  Route53ResolverEndpointExtendedOutputServiceToken:
    Description: Service Token for CloudFormation Custom Resource to provide extra outputs for AWS::Route53::ResolverEndpoint
    Type: String
Resources:
  ResolverEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Little Orange Route53 Resolver Endpoints
      GroupName: LittleOrangeResolverEndpoints
      SecurityGroupIngress:
        - Description: Allow Little Orange CIDR on TCP 53
          FromPort: 53
          IpProtocol: tcp
          SourcePrefixListId: !Ref IpRangesPrefixListId
          ToPort: 53
        - Description: Allow Little Orange CIDR on UDP 53
          FromPort: 53
          IpProtocol: udp
          SourcePrefixListId: !Ref IpRangesPrefixListId
          ToPort: 53
      VpcId: !Ref DnsVpcId

  ResolverEndpointInbound:
    Type: AWS::Route53Resolver::ResolverEndpoint
    Properties:
      Direction: INBOUND
      IpAddresses:
        - SubnetId: !Select [0, !Ref ResolverEndpointSubnetIds]
        - SubnetId: !Select [1, !Ref ResolverEndpointSubnetIds]
        - SubnetId: !Select [2, !Ref ResolverEndpointSubnetIds]
      Name: Little Orange Inbound Resolver
      SecurityGroupIds:
        - !Ref ResolverEndpointSecurityGroup

  ResolverEndpointOutbound:
    Type: AWS::Route53Resolver::ResolverEndpoint
    DependsOn: [ResolverEndpointInbound]
    Properties:
      Direction: OUTBOUND
      IpAddresses:
        - SubnetId: !Select [0, !Ref ResolverEndpointSubnetIds]
        - SubnetId: !Select [1, !Ref ResolverEndpointSubnetIds]
        - SubnetId: !Select [2, !Ref ResolverEndpointSubnetIds]
      Name: Little Orange Outbound Resolver
      SecurityGroupIds:
        - !Ref ResolverEndpointSecurityGroup

  ResolverEndpointExtendedOutput:
    Type: Custom::Route53ResolverEndpointExtendedOutput
    Properties:
      ServiceToken: !Ref Route53ResolverEndpointExtendedOutputServiceToken
      ResolverEndpointId: !Ref ResolverEndpointInbound

  ResolverRule:
    Type: AWS::Route53Resolver::ResolverRule
    Properties:
      DomainName: littleorange.aws
      Name: Little Orange AWS DNS Resolver
      ResolverEndpointId: !Ref ResolverEndpointOutbound
      RuleType: FORWARD
      TargetIps:
        - Ip: !Select [0, !GetAtt ResolverEndpointExtendedOutput.IpAddresses]
        - Ip: !Select [1, !GetAtt ResolverEndpointExtendedOutput.IpAddresses]
        - Ip: !Select [2, !GetAtt ResolverEndpointExtendedOutput.IpAddresses]

  ResolverRuleShare:
    Type: AWS::RAM::ResourceShare
    Properties:
      AllowExternalPrincipals: false
      Name: LittleOrangeDNS
      Principals:
        - !Sub arn:aws:organizations::${OrganizationAccountId}:organization/${OrganizationId}
      ResourceArns:
        - !GetAtt ResolverRule.Arn
Outputs:
  ResolverRuleArn:
    Description: Resolver Rule ARN for Little Orange AWS DNS
    Value: !GetAtt ResolverRule.Arn
  ResolverRuleId:
    Description: Resolver Rule ID for Little Orange AWS DNS
    Value: !GetAtt ResolverRule.ResolverRuleId
  ResolverInboundEndpointIpAddresses:
    Description: IP Addresses for the Route 53 Resolver Inbound Endpoint
    Value: !Join [",", !GetAtt ResolverEndpointExtendedOutput.IpAddresses]
  ResolverOutboundEndpointId:
    Description: Route 53 Resolver Outbound Endpoint ID
    Value: !GetAtt ResolverEndpointOutbound.ResolverEndpointId
